--- a/Styles/Client/favorite.css
+++ b/Styles/Client/favorite.css
@@ -16,13 +16,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  /* height: 1000px; */
   width: 56px;
-
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
   margin-top: 8px;
   padding-top: 40px;
   backdrop-filter: blur(24px);
-
   gap: 64px;
   /* background-color: var(--SideBar-color); */
 }
@@ -39,13 +40,24 @@
   scroll-behavior: smooth;
 }
 
-.favorite-icon {
-  fill: var(--Link-hover-color);
+.icon:hover {
+  color: #1d1d1d;
 }
+
+.icon-img {
+  filter: brightness(0) saturate(100%) invert(48%) sepia(93%) saturate(696%)
+    hue-rotate(160deg) brightness(101%) contrast(102%);
+    transition: filter 0.3s ease;
+}
+
+.icon-img.active {
+    filter: brightness(1.5) saturate(150%);
+  }
 
 .section-container {
   color: white;
   margin-bottom: 188px;
+  margin-left: 56px;
 }
 
 .section-header {
@@ -137,7 +149,6 @@
 
 .content-title {
   margin: 0;
-
   font-size: 35px;
   font-weight: 500;
   line-height: 40px;
