--- a/Styles/Admin/login.css
+++ b/Styles/Admin/login.css
@@ -65,6 +65,19 @@ form {
   color: var(--Input-text-color);
   font-size: 16px;
   font-family: var(--Font_Poppins);
+
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#email {
+  max-width: 400px;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px var(--Admin-sidebar-color) inset;
+  -webkit-text-fill-color: var(--Input-text-color);
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 .login-btn {
@@ -97,19 +110,19 @@ form {
 }
 
 .show-icon {
-  cursor: pointer; /* Pointer göstərir */
-  transition: filter 0.3s ease; /* Yavaş keçid effekti */
+  cursor: pointer;
+  transition: filter 0.3s ease;
 }
 
 .show-icon:hover {
-  filter: brightness(0) invert(1); /* İkonu ağ edir */
+  filter: brightness(0) invert(1);
 }
 
 .password-wrapper {
-  position: relative; /* İkon və input bir konteynerdə */
+  position: relative;
 }
 
 #password {
   width: 100%;
-  padding-right: 40px; /* İkona yer açmaq üçün padding */
+  padding-right: 40px;
 }
