--- a/Styles/Client/landing-page.css
+++ b/Styles/Client/landing-page.css
@@ -50,7 +50,7 @@ h1 {
   border-radius: 4px;
 }
 
-.header-btn:hover {
+.header-btn:hover,.started-btn:hover, .send-btn:hover {
   background-color: var(--Cards-bg-color);
   transition: 0.3s;
 }
@@ -121,24 +121,28 @@ h2 {
 
 form {
   display: flex;
+  align-items: center;
+  justify-content: center;
+ 
   gap: 8px;
 }
 
 input,
 textarea {
+  padding-left: 16px;
   width: 368px;
   height: 55px;
   border-radius: 4px;
   border: 1px solid var(--Border-color_2);
   background-color: #000;
-  box-shadow: 0 2px 9px rgba(0, 0, 0, 0.2); /* Blur effekti üçün kölgə */
-  backdrop-filter: blur(3px);
-  background: rgba(18, 17, 17, 0.1);
+  background: rgba(0, 0, 0, 0.2); 
+  box-shadow: none;
+  backdrop-filter: blur(5px);
   color: #bcbcbc;
 }
 
-input::placeholder {
-  padding: 16px;
+input {
+  padding-left: 16px;
 }
 
 input:focus {
@@ -261,7 +265,6 @@ h6 {
 }
 
 textarea {
-  padding: 16px;
   height: 122px;
 }
 
@@ -370,4 +373,13 @@ textarea {
 
 .footer nav a:hover {
   color: var(--Cards-bg-color);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  border: 1px solid var(--Border-color_2); 
+  -webkit-text-fill-color: #bcbcbc; 
+  box-shadow: 0 0 0px 1000px rgba(0, 0, 0, 0.1) inset; 
+  transition: background-color 5000s ease-in-out 0s;
 }
