--- a/Styles/Admin/categories.css
+++ b/Styles/Admin/categories.css
@@ -1,6 +1,6 @@
 @import url("../../Global/global.css");
 @import url("../../Global/reset.css");
-@import url("../../Global/fonts.css");
+@import url("../../Global/font.css");
 @import url("../../Global/variable.css");
 @import url("../Responsive/Admin/categories-responsive.css");
 @import url("../../Global/bootstrap.css");
@@ -169,7 +169,7 @@ body {
 }
 
 table {
-  width: 374px;
+  width: 45%;
   border-collapse: collapse;
   margin: 20px 0;
   background-color: #ffffff;
@@ -278,16 +278,16 @@ form {
   padding: 30px;
   border-radius: 32px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-  width: 552px;
-  height: 330px;
+  width: 400px;
+  height: 250px;
   max-width: 90%;
 }
 
 .form-group {
-  padding-top: 70px;
+  padding-top: 30px;
 }
 .form-group2 {
-  padding-top: 78px;
+  padding-top: 38px;
 }
 
 input[type="text"] {
@@ -360,11 +360,24 @@ input[type="text"].error {
   transition: background-color 0.3s ease;
 }
 
+.modal-remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+}
+
 .modal-content-2 {
   background-color: #171616;
-  padding: 30px;
+  padding: 40px;
   border-radius: 12px;
-  width: 400px;
+  width: 450px;
   max-width: 90%;
   text-align: center;
   position: relative;
@@ -380,12 +393,12 @@ input[type="text"].error {
 
 .modal-buttons {
   display: flex;
-  justify-content: space-around;
-  gap: 10px;
+  justify-content: center;
+  gap: 30px;
 }
 
 .modal-btn {
-  padding: 10px 20px;
+  padding: 10px 40px;
   border: none;
   border-radius: 8px;
   font-size: 14px;
@@ -411,15 +424,108 @@ input[type="text"].error {
   background-color: #5a5a5a;
 }
 
-.modal-remove {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+/*=================================================================/*/
+
+.pagination-container {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
   z-index: 1000;
+}
+
+.pagination-btn {
+  margin: 0 5px;
+  padding: 8px 16px;
+  border: 1px solid #ccc;
+  background-color: #ffffff;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.pagination-btn.active {
+  background-color: var(--Btn-color);
+  color: #fff;
+  border-color: var(--Btn-color);
+}
+
+.pagination-btn.disabled {
+  background-color: #e0e0e0;
+  color: #a0a0a0;
+  border-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination-btn:hover:not(.disabled) {
+  background-color: var(--Cards-bg-color);
+  color: #fff;
+}
+
+@keyframes popupFadeIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.popup {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 200px;
+  background-color: #1e1e1e;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.popup.show {
+  display: flex;
+  animation: popupFadeIn 0.9s ease forwards;
+}
+
+.popup p {
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.close-btn {
+  width: 80px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #a64ef7;
+  color: white;
+}
+
+.close-btn:hover {
+  opacity: 0.9;
 }
