--- a/Styles/Admin/contactus.css
+++ b/Styles/Admin/contactus.css
@@ -443,3 +443,119 @@ input[type="text"].error {
 .submit-btn {
   transition: background-color 0.3s ease;
 }
+
+
+.pagination-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.pagination-btn {
+  margin: 0 5px;
+  padding: 8px 16px;
+  border: 1px solid #ccc;
+  background-color: #ffffff;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.pagination-btn.active {
+  background-color: var(--Btn-color);
+  color: #fff;
+  border-color: var(--Btn-color);
+}
+
+.pagination-btn.disabled {
+  background-color: #e0e0e0;
+  color: #a0a0a0;
+  border-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination-btn:hover:not(.disabled) {
+  background-color: var(--Cards-bg-color);
+  color: #fff;
+}
+
+@keyframes popupFadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes popupFadeOut {
+  from {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+  to {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+}
+
+.popup {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 200px;
+  background-color: #1e1e1e;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.popup.show {
+  display: flex;
+  animation: popupFadeIn 0.9s ease forwards;
+}
+
+.popup p {
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.close-btn {
+  width: 80px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #a64ef7;
+  color: white;
+}
+
+.close-btn:hover {
+  opacity: 0.9;
+}
