--- a/Styles/Client/landing-page.css
+++ b/Styles/Client/landing-page.css
@@ -50,7 +50,9 @@ h1 {
   border-radius: 4px;
 }
 
-.header-btn:hover,.started-btn:hover, .send-btn:hover {
+.header-btn:hover,
+.started-btn:hover,
+.send-btn:hover {
   background-color: var(--Cards-bg-color);
   transition: 0.3s;
 }
@@ -123,7 +125,7 @@ form {
   display: flex;
   align-items: center;
   justify-content: center;
- 
+
   gap: 8px;
 }
 
@@ -135,7 +137,7 @@ textarea {
   border-radius: 4px;
   border: 1px solid var(--Border-color_2);
   background-color: #000;
-  background: rgba(0, 0, 0, 0.2); 
+  background: rgba(0, 0, 0, 0.2);
   box-shadow: none;
   backdrop-filter: blur(5px);
   color: #bcbcbc;
@@ -378,8 +380,80 @@ textarea {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
-  border: 1px solid var(--Border-color_2); 
-  -webkit-text-fill-color: #bcbcbc; 
-  box-shadow: 0 0 0px 1000px rgba(0, 0, 0, 0.1) inset; 
+  border: 1px solid var(--Border-color_2);
+  -webkit-text-fill-color: #bcbcbc;
+  box-shadow: 0 0 0px 1000px rgba(0, 0, 0, 0.1) inset;
   transition: background-color 5000s ease-in-out 0s;
+}
+
+/* --------------------------------------------------------------------------------- */
+/* test */
+
+.loading-tv-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #000;
+}
+
+.loading-tv {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-tv-frame {
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.loading-tv-content {
+  position: absolute;
+  z-index: 1;
+  width: 74%;
+  height: auto;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* --------------------------------------------------------------------------------- */
+/* test */
+
+.loading-tv-main-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #000;
+}
+
+.loading-tv-2 {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-tv-frame-2 {
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.loading-tv-content-2 {
+  position: absolute;
+  z-index: 1;
+  width: 65%;
+  height: auto;
+  top: 34%;
+  left: 49%;
+  transform: translate(-50%, -50%);
 }
