--- a/Styles/Client/login.css
+++ b/Styles/Client/login.css
@@ -78,7 +78,7 @@ form {
   border-radius: 12px;
   opacity: 0px;
   background: var(--Btn-color);
-  border: 2px solid var(--SideBar-color);
+  border: none;
   font-family: var(--Font_Poppins);
   font-size: 16px;
   font-weight: 400;
@@ -87,6 +87,10 @@ form {
   text-decoration-skip-ink: none;
   color: #ffffff;
   margin-top: 24px;
+}
+
+.input-icon{
+  cursor: pointer;
 }
 
 .form-group:hover {
@@ -107,4 +111,80 @@ nav {
 }
 a {
   color: var(--Link-color);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  background-color: transparent !important;
+  color: var(--Input-text-color) !important;
+  box-shadow: 0 0 0px 1000px var(--Admin-sidebar-color) inset !important;
+  -webkit-text-fill-color: #fff !important;
+ 
+}
+
+
+
+@keyframes popupFadeIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.popup {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 200px;
+  background-color: #1e1e1e;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.popup.show {
+  display: flex;
+  animation: popupFadeIn 0.9s ease forwards;
+}
+
+.popup p {
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.close-btn {
+  width: 80px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #a64ef7;
+  color: white;
+}
+
+.close-btn:hover {
+  opacity: 0.9;
 }
