--- a/Styles/Admin/actors.css
+++ b/Styles/Admin/actors.css
@@ -386,7 +386,7 @@ input.error::placeholder {
 
 .modal-content-2 {
   background-color: #171616;
-  padding: 30px;
+  padding: 40px;
   border-radius: 12px;
   width: 450px;
   max-width: 90%;
@@ -404,8 +404,8 @@ input.error::placeholder {
 
 .modal-buttons {
   display: flex;
-  justify-content: space-around;
-  gap: 10px;
+  justify-content: center;
+  gap: 30px;
 }
 
 .modal-btn {
@@ -493,4 +493,68 @@ input.error::placeholder {
 
 .image-default-1 {
   object-fit: cover;
+}
+
+@keyframes popupFadeIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.popup {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 200px;
+  background-color: #1e1e1e;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.popup.show {
+  display: flex;
+  animation: popupFadeIn 0.9s ease forwards;
+}
+
+.popup p {
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.close-btn {
+  width: 80px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #a64ef7;
+  color: white;
+}
+
+.close-btn:hover {
+  opacity: 0.9;
 }
